# JobRunnerServer

./: CMakeLists.txt  Dockerfile  README.md  config.json
.github/workflows/: build.yml
src/: main.cpp
src/Helpers/Headers/: HelperHeader.h
src/Server/: Http.cpp  Server.cpp
src/Server/Headers/: ServerHeader.h
